--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yokdah ?</title>
-    <meta name="description" content="A sweet Valentine's Day message for someone special">
+    <meta name="description" content="yokdah">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -192,3 +192,4 @@
 
 
 </html>
+
